<resources>
    <string name="app_name">My Dicoding Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_finished">Finished</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_settings">Settings</string>
    <string name="added_to_favorite">Event added to Favorite</string>
    <string name="removed_from_favorite">Event removed from Favorite</string>
    <string name="image_cover">Image Cover</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="register">Register</string>
</resources>